    (Closes: #281572)
  * Conflict/Replaces obsolete package 'xine' (Closes: #300852)

  [ Darren Salt ]
  * Tidy up the FAQ list and README installation to quieten dh_install.
  * Re-update the FSF address in debian/copyright. It got lost in 1.1.1-1.
  * Add build-dep alternatives for those of us who do backports to sarge.
  * Tidy up the package descriptions a little.

  * Empty config file no longer prevents the config from being saved.
    (Fixed in upstream 1.1.1) (Closes: #320164)

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 25 Feb 2006 12:26:10 +0100

xine-lib (1.1.1-1) unstable; urgency=low

  * New upstream release! (Closes: #326936, #353150, #332919)

  [ Reinhard Tartler ]
    - adding myself to uploaders
    - Remove build dependencies on xlibs-dev, as well as alternatives on
      xlibs-dev-static. Debian is on its way towards X11R7!
      (Closes: #337997, #346488, #345499, #342208, #347162)
    - Rechecking the long list of NMUs. Thanks to all submitters!

  [ Darren Salt ]
    - Add debian/watch file for uscan.
    - Convert debian/copyright to UTF-8.
    - Add build-deps on libxv-dev and libvcdinfo-dev.
    - Bump standards version to 3.6.2
    - Make "post-Sarge"-tagged changes to debian/rules and strip debian/tmp/
      from debian/*.install.
    - Remove *.gmo on clean (Just In Case). (Closes: #338000)
    - Do a little preparation for a possible -dbg package.

  * Acknowledge NMUs.
    - Backports and gcc 4.0 fixes dropped since they're already in this version.
      Closes: #288189, #318838   
    - slang transition: Closes: #315986
    - aalib transition: Closes: #320317, #323276
    - flac transition: Closes: #325960 
    - fix of dependency generation script debian/shlibdeps.sh: 
      Closes: #326935, #327203, #328168, #328184, #328265, #328454
    - fix bashism in debian/rules: Closes: #337996

 -- Reinhard Tartler <siretart@tauware.de>  Sun, 19 Feb 2006 18:34:51 +0100

xine-lib (1.0.1-1.6) unstable; urgency=low
